@@ -1,5 +1,8 @@
 Therion 5.5.1 (in progress):
 
+therion:
+ * duplicate shot length removed from surveyed/expored individual team member 
+   statistics
 
 --------------------------------------------------------------------------------
 
